# ministore

./: Cargo.toml  LICENSE  README-ru.md  README.md
docs/: ARCHITECTURE.md  АРХИТЕКТУРА.md
minisnap/: Cargo.toml  README.md
minisnap/src/: error.rs  lib.rs
ministate/: Cargo.toml  LICENSE-MIT  README.md
ministate/src/: error.rs  lib.rs
ministore/: Cargo.toml  README.md
ministore/docs/: ARCHITECTURE.md  АРХИТЕКТУРА.md
ministore/src/: error.rs  lib.rs
src/: lib.rs
