# mini-rs/Cargo.toml
[workspace]
resolver = "2"
members = [
    "ministore",
    # "minisnap",
    # "ministate",
    # "miniqueue",
]

[workspace.package]
publish = false

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["fs", "io-util"] }

