# mini-rs/Cargo.toml
[workspace]
resolver = "2"
members = [
    "ministore",
    # "minisnap",
    # "ministate",
    # "miniqueue",
]

[workspace.package]
publish = false
authors = ["Alexey Rybakov", "ArcellaTeam"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ArcellaTeam/mini-rs/"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tempfile = "3.23"
tokio = { version = "1.0", features = ["fs", "io-util"] }
thiserror = "2.0.17"

