# mini-rs/minisnap/Cargo.toml
[package]
name = "minisnap"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Minimal snapshot store for durable state managers"
keywords = ["snapshot", "state", "durability", "embedded", "wal"]
categories = ["database-implementations", "filesystem"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
