# mini-rs/ministore/Cargo.toml
[package]
name = "ministore"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "WAL-based embedded state store for Rust-application"
repository = "https://github.com/ArcellaTeam/mini-rs/"
keywords = ["wal", "log", "durable", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23"
tokio = { version = "1.0", features = ["macros", "rt"] }
