# mini-rs/ministore/Cargo.toml
[package]
name = "ministore"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WAL-based embedded state store for Rust-application"
keywords = ["wal", "log", "durable", "embedded"]
categories = ["database-implementations", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
